--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -41,10 +41,11 @@
         <label for="package">Stamped Letter</label><br/>
       <input type="radio" name="package" value="metered">
         <label for="package">Metered Letter</label><br/>
-        <input type="radio" name="package" value="flats">
+      <input type="radio" name="package" value="flat">
         <label for="package">Large Flat Envelope</label><br/>
-      <input type="radio" name="package" value="parcels">
+      <input type="radio" name="package" value="parcel">
         <label for="package">Parcel</label><br/>
+
       <input type="submit" name="submit">
     </form>
     <button onclick="dothejax()">AJAX Version </button>
