--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -6,7 +6,7 @@
 <body>
   <% include ../partials/nav.ejs %>
   <div class="container">
-    <h1>This is a test</h1>
+    <h1>Your Package Information</h1>
     <h2><%= result %><h2>
     
   </div>
