--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,7 +9,7 @@
     function dothejax() {
       // alert('is this called?');
       //do an ajax
-        $.get('/math_service', 
+        $.get('/calculateRate', 
           {
             'weight': $('input[name=weight]').val(),
             'package': $('input[name=package]:checked').val()
@@ -31,8 +31,8 @@
     
   </script>
   <div class="container">
-    <h1>This is a test</h1>
-    <form action="/math" method="GET">
+    <h1>Package Details</h1>
+    <form action="/getRate" method="GET">
       <label for="weight">Ounces</label>
       <input type="text" name="weight" value="2"><br/>
 
@@ -50,6 +50,7 @@
     </form>
     <button onclick="dothejax()">AJAX Version </button>
     <h2 id="result"></h2>
+    <p id="details"></p>
   </div>
 </body>
 </html>
