last one didn't work

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,8 +23,8 @@
             var result = data.result;
             //update DOM.
             $('#result').html(result);
-            $('#package').html(input[name=package]);
-            $('#weight').html(input[name=weight]);
+            //$('#package').html(input[name=package]);
+            //$('#weight').html(input[name=weight]);
           }
         });
     }
