Still trying to fix it

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,8 +23,8 @@
             var result = data.result;
             //update DOM.
             $('#result').html(result);
-            //$('#package').html(input[name=package]);
-            //$('#weight').html(input[name=weight]);
+            $('#package').html(input[name=package]);
+            $('#weight').html(input[name=weight]);
           }
         });
     }
@@ -35,7 +35,7 @@
     <h1>Package Details</h1>
     <form action="/getRate" method="GET">
       <label for="weight">Ounces</label>
-      <input type="text" name="weight" value="2"><br/>
+      <input type="text" name="weight"><br/>
 
       <label for="package">Select Packaging</label><br/>
       <input type="radio" name="package" value="stamped" checked>
